Replaces image input with simple img inside anchor.

--- a/index.htm
+++ b/index.htm
@@ -327,7 +327,7 @@
                 <li class="search"><a href="#" data-toggles="#site-search-wrapper" data-omni-click="inherit"><span>Search</span></a></li>
                 <li class="menu"><a href="#" data-toggles="#site-menu-wrapper" data-omni-click="inherit"><span>Menu</span></a></li>
                 <li class="menu">
-                    <input type="image" src="https://cl.ly/3m2E2c3m3139/cogwheel-outline.svg" alt="Preferences" aria-label="Preferences" id="prefs-btn">
+                    <a href="/userprefs" id="prefs-btn"><img src="https://cl.ly/3m2E2c3m3139/cogwheel-outline.svg" alt="Open user preferences"></a>
                 </li>
             </ul>
 
