--- a/index.htm
+++ b/index.htm
@@ -269,8 +269,8 @@
 
 <div id="site" class="">
     <aside id="prefs-modal" aria-hidden="true">
-                    <div class="content" role="dialog" aria-labelledby="prefs-title" aria-describedby="prefs-desc">
-                        <h1 id="prefs-title">UI settings</h1>
+                    <div class="content" role="dialog" aria-labelledby="prefs-title" aria-describedby="prefs-desc" tabindex="-1">
+                        <h1 id="prefs-title" tabindex="0">UI settings</h1>
                         <p id="prefs-desc">Choose from the options below to customize how this website looks.</p>
                         <form action="/userprefs" method="post" role="form" id="prefs-form">
                             <fieldset>
